syntax = "proto3";

package server_streaming;

// A basic message
message HelloRequest {
  string name = 1;
}

// The response
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service Hello {
  rpc SayHello (HelloRequest) returns (stream HelloReply) {}
}
